--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # datasource
 server.port=8080
 
-jd.pt_key=${PT_KEY:你的pt_key}
-jd.pt_pin=${PT_PIN:你的pt_pin}
+jd.pt_key=${PT_KEY:AAJigbIEADAbACd-BAGwU9grJ0xNOMo4ByA1097nOA31LYD39YgaM6q93YxY3WbC0zl5LaCtdcg}
+jd.pt_pin=${PT_PIN:%E6%98%95%E5%B0%8A%E5%86%95%E4%B8%8B}
